john-Added paragraph

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html> 
 <b>
 <Center> Suresh First GitHub Project </Center>
+<p> Introduction: What is GIT?
+    Git is a free and open-source distributed version control system, which is designed to handle everything from small to very large projects with speed and efficiency.
+    
+    So Why Git? What are the advantages?
+    Imagine a scenario without using Git.
+    
+    There is a large project and 100 developers are working on the project.</p>
 </html>
