mathew - update from my side done

--- a/index.html
+++ b/index.html
@@ -8,4 +8,16 @@
     Imagine a scenario without using Git.
     
     There is a large project and 100 developers are working on the project.</p>
+    <br>
+    <br>
+
+    <p> 2. Features of Git
+        Free and open-source
+        Tracks history
+        Supports non-linear development
+        Creates backup
+        Scalable
+        Supports collaboration
+        Branching is easier
+        Distributed development</p>
 </html>
